--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "web.dev",
   "version": "2.0.0",
   "scripts": {
-    "build": "npm-run-all clean sass gulp rollup eleventy rollup-sw",
+    "build": "npm-run-all build:functions build:hosting",
+    "build:functions": "npm run build --prefix functions",
+    "build:hosting": "npm-run-all clean sass gulp rollup eleventy rollup-sw",
     "clean": "rm -rf dist",
     "coverage:integration": "c8 npm-run-all test:lib test:unit test:integration",
     "coverage:unit": "c8 npm run test:unit",
@@ -13,8 +15,9 @@
     "debug:test:lib": "TEST_MODE=debug npm-run-all clean rollup --parallel watch:rollup karma",
     "debug:test:unit": "node --inspect-brk ./node_modules/.bin/mocha ./test/unit",
     "deploy:cleanup": "node ./tools/cleanup-versions/index.js web-dev-production-1",
-    "deploy": "ELEVENTY_ENV=prod npm run build && node index-algolia.js && gcloud app deploy --project web-dev-production-1 --quiet",
-    "dev": "npm-run-all clean rollup rollup-sw sass --parallel --race watch:rollup watch:sass watch:eleventy watch:gulp watch:rollup-sw start",
+    "deploy": "firebase deploy",
+    "deploy:cli": "firebase deploy --non-interactive --token $FIREBASE_TOKEN",
+    "dev": "npm-run-all clean rollup rollup-sw sass --parallel watch:rollup watch:sass watch:eleventy watch:gulp watch:rollup-sw build:functions start",
     "eleventy": "eleventy --quiet",
     "gulp": "npx gulp build",
     "karma": "karma start",
@@ -33,7 +36,7 @@
     "stage:cleanup": "node ./tools/cleanup-versions/index.js web-dev-staging",
     "stage:personal": "ELEVENTY_ENV=prod npm run build && gcloud app deploy --project web-dev-staging --quiet --no-promote",
     "stage": "ELEVENTY_ENV=prod npm run build && gcloud app deploy --project web-dev-staging --quiet",
-    "start": "node ./server.js",
+    "start": "firebase emulators:start",
     "test:integration": "mocha ./test/integration",
     "test:lib": "npm-run-all clean rollup karma",
     "test:unit": "mocha ./test/unit && npm run test:lib",
@@ -43,7 +46,8 @@
     "watch:rollup": "chokidar \"src/lib/**/*.{js,scss}\" --silent -c \"npm run rollup\"",
     "watch:rollup-sw": "chokidar \"src/lib/**/*.js\" --silent -c \"npm run rollup-sw\"",
     "watch:sass": "chokidar \"src/styles/**/*.scss\" --silent -c \"npm run sass\"",
-    "watch:test:lib": "TEST_MODE=dev npm-run-all clean rollup --parallel watch:rollup karma"
+    "watch:test:lib": "TEST_MODE=dev npm-run-all clean rollup --parallel watch:rollup karma",
+    "postinstall": "npm ci --prefix functions"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -88,6 +92,7 @@
     "dotenv": "^8.2.0",
     "fancy-log": "^1.3.3",
     "firebase": "^7.14.6",
+    "firebase-tools": "^8.9.0",
     "gts": "^2.0.2",
     "gulp": "^4.0.0",
     "gulp-imagemin": "^7.1.0",
